# taktakk

./: CHANGELOG.md  Cargo.toml  NOTICE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/taktakk-android-wrapper/: Cargo.toml
apps/taktakk-android-wrapper/src/: main.rs
apps/taktakk-linux/: Cargo.toml
apps/taktakk-linux/src/: main.rs
apps/taktakk-pwa/: Cargo.toml
apps/taktakk-pwa/src/: main.rs
crates/taktakk-a11y/: Cargo.toml
crates/taktakk-a11y/src/: audit.rs  lib.rs  settings.rs  tests.rs
crates/taktakk-content/: Cargo.toml
crates/taktakk-content/src/: lib.rs  samples.rs  tests.rs
crates/taktakk-content/src/fixtures/: mod.rs
crates/taktakk-content/src/install/: mod.rs
crates/taktakk-content/src/nmp/: error.rs  manifest.rs  mod.rs  reader.rs  stream_reader.rs  writer.rs
crates/taktakk-content/src/verify/: mod.rs
crates/taktakk-core/: Cargo.toml
crates/taktakk-core/src/: error.rs  lib.rs  tests.rs
crates/taktakk-core/src/domain/: curriculum.rs  mod.rs  package.rs  profile.rs  progress.rs  sync.rs
crates/taktakk-core/src/ports/: crypto.rs  mod.rs  module_runtime.rs  package_store.rs  storage.rs  sync.rs
crates/taktakk-core/src/use_cases/: field_check.rs  health_check.rs  install_package.rs  mod.rs  open_module.rs  panic_wipe.rs  release.rs  resume_learning.rs  safety_settings.rs  start_sync.rs  verify_package.rs
crates/taktakk-facade-clock/: Cargo.toml
crates/taktakk-facade-clock/src/: clock.rs  gesture.rs  lib.rs  settings.rs  tests.rs
crates/taktakk-i18n/: Cargo.toml
crates/taktakk-i18n/src/: direction.rs  fixtures.rs  lib.rs  locale.rs  lookup.rs  navigation.rs  tests.rs
crates/taktakk-integration/: Cargo.toml
crates/taktakk-integration/src/: harness.rs  lib.rs  tests.rs
crates/taktakk-module-engine/: Cargo.toml
crates/taktakk-module-engine/src/: catalog.rs  error.rs  exercise.rs  lib.rs  runner.rs  state.rs  step.rs  tests.rs
crates/taktakk-security/: Cargo.toml
crates/taktakk-security/src/: audit.rs  hash.rs  key_slot.rs  lib.rs  revocation.rs  tests.rs  trust_anchor.rs  verifier.rs  wipe.rs
crates/taktakk-storage/: Cargo.toml
crates/taktakk-storage/src/: db.rs  error.rs  event_log.rs  failure_injection.rs  lib.rs  maintenance.rs  object_store.rs  repo.rs  tests.rs  wipe.rs
crates/taktakk-storage/src/repo/: curriculum.rs  facade.rs  package.rs  profile.rs  progress.rs  sync.rs
crates/taktakk-sync/: Cargo.toml
crates/taktakk-sync/src/: chunk.rs  import.rs  inventory.rs  lib.rs  manifest.rs  permission.rs  tests.rs
crates/taktakk-sync/src/transport/: local.rs  mod.rs
crates/taktakk-ui/: Cargo.toml
crates/taktakk-ui/src/: lib.rs
docs/: README.md  book.toml
docs/content-authors/: module-authoring-guide.md
docs/developers/: architecture.md
docs/field-operators/: pilot-checklist.md  seed-distribution.md
docs/release/: release-checklist.md  reproducible-builds.md
docs/security-reviewers/: audit-checklist.md  panic-wipe.md  threat-model.md
docs/src/: SUMMARY.md  introduction.md
docs/src/contributing/: README.md  architecture.md  local-development.md  philosophy.md  release.md  reproducible-builds.md
docs/src/getting-started/: README.md  faq.md  features.md  guidelines.md  tutorial.md
docs/src/guide/: README.md  api-reference.md  content-packages.md  module-authoring.md  panic-wipe.md  security-audit.md
rfcs/: README.md
rfcs/done/: 000-rfc-lifecycle-policy.md  RFC-001-clock-facade-domain-model.md  RFC-002-stealth-unlock-and-duress-gesture.md  RFC-003-delayed-permission-architecture.md  RFC-004-triple-layer-storage-schema.md  RFC-005-async-sqlite-repository-layer.md  RFC-006-post-migration-integrity-check.md  RFC-007-content-addressed-object-store.md  RFC-008-nmp-binary-package-format.md  RFC-009-ed25519-package-signing.md  RFC-010-sha-256-per-object-hash-verification.md  RFC-011-quarantine-on-any-verification-failure.md  RFC-012-shield-spear-dashboard-model.md  RFC-013-lesson-runner-state-machine.md  RFC-014-exercise-evaluation-and-retry.md  RFC-015-rtl-ltr-navigation-mirroring.md  RFC-016-crash-safe-lesson-resume-state.md  RFC-017-i18n-3-tier-locale-fallback.md  RFC-018-panic-wipe-model-key-first.md  RFC-019-zero-telemetry-log-policy.md  RFC-020-safety-settings-domain.md  RFC-021-physical-media-import-pipeline.md  RFC-022-sync-inventory-exchange-protocol.md  RFC-023-chunk-based-transfer-and-resume.md  RFC-024-permission-request-timing-rules.md  RFC-025-performance-budget-constants.md  RFC-026-abdd-accessibility-audit.md  RFC-027-security-review-checklist.md  RFC-028-release-manifest-and-seed-kit-profiles.md  RFC-029-failure-injection-test-harness.md  RFC-030-storage-maintenance-and-gc.md  RFC-031-offline-health-check-service.md  RFC-032-content-lifecycle-states.md  RFC-033-trust-revocation-model.md  RFC-034-field-pilot-protocol.md  RFC-035-sample-content-packages.md  RFC-036-end-to-end-integration-test-suite.md
rfcs/proposed/: RFC-037-core-data-encryption.md  RFC-038-cryptographic-wipe-redesign.md  RFC-039-streaming-nmp-parser.md  RFC-040-transactional-package-install.md  RFC-041-event-log-safe-api.md  RFC-042-supply-chain-integrity.md  RFC-043-xtask-real-execution.md  RFC-044-leptos-ui-roadmap.md  RFC-045-real-transport-adapter.md  RFC-046-revocation-pipeline.md  RFC-047-trust-anchor-privacy.md  RFC-048-performance-benchmarks.md  RFC-049-housekeeping.md
xtask/: Cargo.toml
xtask/src/: main.rs
