[package]
name = "taktakk-linux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "taktakk"
path = "src/main.rs"

[dependencies]
taktakk-core           = { path = "../../crates/taktakk-core" }
taktakk-facade-clock   = { path = "../../crates/taktakk-facade-clock" }
taktakk-security       = { path = "../../crates/taktakk-security" }
taktakk-i18n           = { path = "../../crates/taktakk-i18n" }
taktakk-a11y           = { path = "../../crates/taktakk-a11y" }
taktakk-module-engine  = { path = "../../crates/taktakk-module-engine" }
