[package]
name = "taktakk-content"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
taktakk-core = { path = "../taktakk-core" }
taktakk-security = { path = "../taktakk-security" }

[dev-dependencies]
rand.workspace = true
