[package]
name = "taktakk-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
argon2.workspace = true
zeroize.workspace = true
rand.workspace = true
hex.workspace = true
serde_json.workspace = true

taktakk-core = { path = "../taktakk-core" }
