[package]
name = "taktakk-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx.workspace = true
tokio.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
chrono.workspace = true
taktakk-core = { path = "../taktakk-core" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
