[package]
name = "taktakk-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
taktakk-core    = { path = "../taktakk-core" }
taktakk-content = { path = "../taktakk-content" }
